<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_color"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/dimen_30dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/dimen_150"
                android:layout_height="@dimen/dimen_150"
                android:layout_gravity="center"
                android:src="@drawable/ic_logo" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserratsemibold"
                android:padding="@dimen/dimen_5dp"
                android:text="Welcome,"
                android:textColor="@color/white"
                android:textSize="@dimen/dimen_30sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserratregular"
                android:text="@string/sign_in_to_your_account"
                android:textColor="@color/white"
                android:textSize="@dimen/dimen_20sp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtLEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_30dp"
                android:backgroundTint="@color/white"
                android:drawableLeft="@drawable/ic_name"
                android:drawablePadding="@dimen/dimen_10dp"
                android:fontFamily="@font/montserratregular"
                android:hint="@string/email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:maxLength="36"
                android:maxLines="1"
                android:minLines="1"
                android:padding="@dimen/dimen_20dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="@dimen/dimen_20sp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtLPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:drawableLeft="@drawable/ic_lock"
                android:drawablePadding="@dimen/dimen_10dp"
                android:fontFamily="@font/montserratregular"
                android:hint="@string/password"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:maxLength="20"
                android:maxLines="1"
                android:minLines="1"
                android:padding="@dimen/dimen_20dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="@dimen/dimen_20sp" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtForgotPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserratregular"
                android:gravity="end"
                android:text="@string/forgot_password"
                android:textColor="@color/white"
                android:textSize="@dimen/dimen_18sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_30dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnLSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="@dimen/dimen_30dp"
                android:padding="@dimen/dimen_20dp"
                style="@style/AppTheme.RoundedCornerMaterialButton"
                android:text="@string/sign_in"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/dimen_20sp" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="@dimen/dimen_40dp"
                android:orientation="horizontal">
            <View
                android:layout_width="@dimen/dimen_150dp"
                android:layout_height=".2dp"
                android:background="@color/line" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtLoginSkip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserratregular"
                android:layout_gravity="center"
                android:padding="@dimen/dimen_20dp"
                android:text="@string/skip"
                android:textColor="@color/white"
                android:textSize="@dimen/dimen_18sp" />

            <View
                android:layout_width="@dimen/dimen_150dp"
                android:layout_height=".2dp"
                android:background="@color/line" />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.core.widget.NestedScrollView>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="@dimen/dimen_20dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:fontFamily="@font/montserratregular"
            android:gravity="center"
            android:padding="@dimen/dimen_5dp"
            android:text="@string/don_t_have_an_account"
            android:textColor="@color/white"
            android:textSize="@dimen/dimen_18sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtSignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:fontFamily="@font/montserratsemibold"
            android:gravity="center"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textSize="@dimen/dimen_18sp" />

    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.appcompat.widget.LinearLayoutCompat>