<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_color"
    tools:context=".ForgotPasswordActivity">

    <include layout="@layout/custom_toolbar"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/dimen_30dp">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="@dimen/dimen_180dp"
        android:layout_height="@dimen/dimen_180dp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dimen_30dp"
        android:padding="@dimen/dimen_40dp"
        android:background="@drawable/rounded_circle"
        android:src="@drawable/ic_lock1" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_50dp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:fontFamily="@font/montserratsemibold"
        android:text="@string/please_enter_your_email_address"
        android:textColor="@color/white"
        android:textSize="@dimen/dimen_14sp" />
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:fontFamily="@font/montserratsemibold"
        android:text="@string/to_reset_your_password"
        android:textColor="@color/white"
        android:textSize="@dimen/dimen_14sp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtEmailPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_30dp"
            android:drawableLeft="@drawable/ic_message"
            android:drawablePadding="@dimen/dimen_10dp"
            android:padding="@dimen/dimen_20dp"
            android:maxLength="36"
            android:maxLines="1"
            android:minLines="1"
            android:backgroundTint="@color/white"
            android:textColorHint="@color/white"
            android:imeOptions="actionDone"
            android:fontFamily="@font/montserratregular"
            android:inputType="text"
            android:hint="@string/email"
            android:textColor="@color/white"
            android:textSize="@dimen/dimen_20sp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_50dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnContinue"
            android:layout_width="match_parent"
            android:elevation="@dimen/dimen_30dp"
            android:background="@drawable/button_bag"
            android:layout_height="wrap_content"
            android:padding="@dimen/dimen_20dp"
            android:textSize="@dimen/dimen_20sp"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:text="@string/action_continue" />

    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.appcompat.widget.LinearLayoutCompat>

