<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_color"
    android:orientation="vertical"
    tools:context=".RegistrationActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/dimen_20dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/dimen_100dp"
                android:layout_height="@dimen/dimen_100dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_logo" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserratsemibold"
                android:gravity="center"
                android:padding="@dimen/dimen_10dp"
                android:text="Create an account"
                android:textColor="@color/white"
                android:textSize="@dimen/dimen_30sp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:drawableLeft="@drawable/ic_name"
                android:drawablePadding="@dimen/dimen_10dp"
                android:fontFamily="@font/montserratregular"
                android:hint="@string/username"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLength="5"
                android:maxLines="1"
                android:minLines="1"
                android:padding="@dimen/dimen_20dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="@dimen/dimen_20sp" />


            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:drawableLeft="@drawable/ic_message"
                android:drawablePadding="@dimen/dimen_10dp"
                android:fontFamily="@font/montserratregular"
                android:hint="@string/email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:maxLength="36"
                android:maxLines="1"
                android:minLines="1"
                android:padding="@dimen/dimen_20dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="@dimen/dimen_20sp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtMobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:drawableLeft="@drawable/ic_phone"
                android:drawablePadding="@dimen/dimen_10dp"
                android:fontFamily="@font/montserratregular"
                android:hint="@string/mobile"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:maxLength="10"
                android:maxLines="1"
                android:minLines="1"
                android:padding="@dimen/dimen_20dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="@dimen/dimen_20sp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:drawableLeft="@drawable/ic_lock"
                android:drawablePadding="@dimen/dimen_10dp"
                android:fontFamily="@font/montserratregular"
                android:hint="@string/password"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:maxLength="20"
                android:maxLines="1"
                android:minLines="1"
                android:padding="@dimen/dimen_20dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="@dimen/dimen_20sp" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtConformPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:drawableLeft="@drawable/ic_lock"
                android:drawablePadding="@dimen/dimen_10dp"
                android:fontFamily="@font/montserratregular"
                android:hint="@string/confirmpassword"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLength="20"
                android:maxLines="1"
                android:minLines="1"
                android:padding="@dimen/dimen_20dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="@dimen/dimen_20sp" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSignup"
                style="@style/AppTheme.RoundedCornerMaterialButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_30dp"
                android:elevation="@dimen/dimen_30dp"
                android:padding="@dimen/dimen_20dp"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/dimen_20sp" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.core.widget.NestedScrollView>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/dimen_10dp"
        android:layout_marginBottom="@dimen/dimen_20dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserratregular"
            android:gravity="center"
            android:text="@string/already_have_an_account"
            android:textColor="@color/white"
            android:textSize="@dimen/dimen_18sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btnSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserratsemibold"
            android:gravity="center"
            android:layout_marginLeft="@dimen/dimen_5dp"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            android:textSize="@dimen/dimen_18sp" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>