<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:cardBackgroundColor="@color/light_color"
    app:cardElevation="@dimen/dimen_30dp">


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtLinearName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_20dp"
            android:padding="@dimen/dimen_20dp"
            android:text="@string/are_you_sure_you_want_to_log_out"
            android:textColor="@color/white"
            android:textSize="@dimen/dimen_15sp" />


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtCancle"
                style="@style/AppTheme.RoundedCornerMaterialButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dimen_10dp"
                android:background="@drawable/button_bag"
                android:paddingLeft="@dimen/dimen_30dp"
                android:paddingRight="@dimen/dimen_30dp"
                android:text="@string/cancel"
                android:textSize="12sp"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:textAllCaps="false"
                android:textColor="@color/white" />

            <View
                android:layout_width="@dimen/dimen_50dp"
                android:layout_height="@dimen/dimen_20dp" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtLogout"
                style="@style/AppTheme.RoundedCornerMaterialButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/dimen_10dp"
                android:background="@drawable/button_bag"
                android:paddingLeft="@dimen/dimen_30dp"
                android:layout_marginTop="@dimen/dimen_10dp"
                android:paddingRight="@dimen/dimen_30dp"
                android:text="@string/log_out"
                android:textSize="12sp"
                android:textAllCaps="false"
                android:textColor="@color/white" />
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.cardview.widget.CardView>